  in your code, you can replace it with public GetWindowBorderSize().

- Microsoft Visual Studio 2003 (a.k.a. MSVC 7) is not supported any longer, the
  minimum required version is now 2005.


3.2.6: (released ????-??-??)
----------------------------

All (GUI):

- Speed up using XRC when using wxXRC_NO_RELOADING (John de Rooij, #24536).

wxOSX:

- Improve wxSlider ticks appearance (Hartwig Wiesmann, #24532).
- Fix wrong wxSlider label in some cases (Hartwig Wiesmann, #24539).


3.2.5: (released 2024-05-14)
----------------------------

All:

- Add support for "%F" format specifier to wxDateTime (#24173).
- Support dates > 2038 if time_t is 64-bit (Lauri Nurmi, #24464).
- Restore possible ABI incompatibility with wx < 3.2.3 in wxString.
- Set request and response for wxEVT_WEBREQUEST_DATA events (#24416).

All (GUI):

- Fix division-by-zero in wxRichTextCtrl (#23763).
- Make wxGraphicsContext offsetting consistent across scales (#23485).
- Improve error checking when saving TIFF images (Brian Delalex, #23214).
- Fix crash in wxLogGui when wxUSE_LOG_DIALOG==0 (Randalphwa, #24087).
- Use wxUILocale in wxFloatProperty (Miguel Gimenez, Artur Wieczorek, #24140).
- Fix crash in wxImage::InitAlpha() if image is invalid (Randalphwa, #24260).
- Fix wxLogStatus() when wxNO_IMPLICIT_WXSTRING_ENCODING is defined (#24267).
- Don't let exceptions escape from event handlers called during idle processing.
- Fix reading some previously not loaded GIF images (Mark Wagner, #22799).
- Fix wxGrid selection after deleting rows/cols (Dietmar Schwertberger, 24286).
- Auto-grow in-place editor in generic wxListCtrl again (taler21, #24293).
- Center labels in generic wxListCtrl correctly again (taler21, #24292).
- Fix label display after editing it in generic wxListCtrl (taler21, #24311).
- Improve multiple selection UI in generic wxListCtrl (taler21, #24332).
- Fix item deselection in multi-selection generic wxListCtrl (taler21, #24312).